# MatildaRover

./: .gitignore  LICENSE  README.md
install/: setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/service_files/: logrotatefile.md  matilda_sensors.service  matilda_services.service.ini  matilda_tests.service
ros2_ws/src/: README.md
ros2_ws/src/matilda_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/matilda_sensors/: package.xml  setup.py
ros2_ws/src/tests_package/: package.xml  setup.cfg  setup.py
src/matilda_interfaces/: CMakeLists.txt  package.xml
src/matilda_interfaces/srv/: SensorMeasurement.srv
src/matilda_rover/: package.xml  setup.cfg  setup.py
src/matilda_sensors/: package.xml  setup.py
src/matilda_sensors/matilda_sensors/: matilda_sensor_pack.py  matilda_sensor_service_client.py  matilda_sensor_service_client_continuousSpin.py  matilda_sensor_service_server.py  matilda_sensor_subscriber.py  publisher_test_function.py
src/sample_package/: package.xml  setup.cfg  setup.py
src/sample_package/sample_package/: sample_node2.py  sample_service.py  sample_service_client.py  sample_service_server.py
tests_hardware/: Atmo_Si7021.py  Gyro_fxos8700.py  PiToArduinoTest.py  SerialDetection.py  Sonic_HCSR04.py  config.toml  motors.py  rover.py  sampleHardwareInterface.py
tests_hardware/arduino/SerialResponder/: SerialResponder.ino
tests_hardware/arduino/hello_world/: hello_world.ino
tests_hardware/arduino_sketches/SerialResponder/: SerialResponder.ino
tests_hardware/arduino_sketches/motor_test/: motor_test.ino
(+13 files in other folders)
